Removed MapJS as map